2008-11-25  Nick Clifton  <nickc@redhat.com>

	* m68k-dis.c: Rewrite to remove use of setjmp/longjmp.

2008-11-18  Catherine Moore  <clm@codesourcery.com>

	* arm-dis.c (coprocessor_opcodes): Add half-precision vcvt
	instructions.
	(neon_opcodes): Likewise.
	(print_insn_coprocessor): Print 't' or 'b' for vcvt
	instructions.

2008-11-14  Tristan Gingold  <gingold@adacore.com>

	* makefile.vms (OBJS): Update list of objects.
	(DEFS): Update
	(CFLAGS): Update.

2008-11-06  Chao-ying Fu  <fu@mips.com>

	* mips-opc.c (synciobdma, syncs, syncw, syncws): Move these
	before sync.
	(sync): New instruction with 5-bit sync type.
	* mips-dis.c (print_insn_args: Add case '1' to print 5-bit values.

2008-11-06  Nick Clifton  <nickc@redhat.com>

	* avr-dis.c: Replace uses of sprintf without a format string with
	calls to strcpy.

2008-11-03  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-opc.tbl: Add cmovpe and cmovpo.
	* i386-tbl.h: Regenerated.

2008-10-22  Nick Clifton  <nickc@redhat.com>

	PR 6937
	* configure.in (SHARED_LIBADD): Revert previous change.
	Add a comment explaining why.
	(SHARED_DEPENDENCIES): Revert previous change.
	* configure: Regenerate.

2008-10-10  Nick Clifton  <nickc@redhat.com>

	PR 6937
	* configure.in (SHARED_LIBADD): Add libiberty.a.
	(SHARED_DEPENDENCIES): Add libiberty.a.

2008-09-30  H.J. Lu  <hongjiu.lu@intel.com>

	* i386-gen.c: Include "hashtab.h".
	(next_field): Take a new argument, last.  Check last.
	(process_i386_cpu_flag): Updated.
	(process_i386_opcode_modifier): Likewise.
	(process_i386_operand_type): Likewise.
	(process_i386_registers): Likewise.
	(output_i386_opcode): New.
	(opcode_hash_entry): Likewise.
	(opcode_hash_table): Likewise.
	(opcode_hash_hash): Likewise.
	(opcode_hash_eq): Likewise.
	(process_i386_opcodes): Use opcode hash table and opcode array.

2008-09-30  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* s390-opc.txt (stdy, stey): Fix description

2008-09-30  Alan Modra  <amodra@bigpond.net.au>
